Sat Nov  5 14:17:20 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (brace_body, do_body): since cmdarg_stack is saved in
	  VALUE val, should restore from the same member.  on big-endian
	  platforms where VALUE is larger than int, it restored 0 in the
	  upper word.  [ruby-core:77920] [Bug #12900]

Sat Nov  5 13:52:52 2016  Akinori MUSHA  <knu@iDaemons.org>

	* lib/shellwords.rb (Shellwords#shellsplit): Fix the handling of
	  the backslash in double quotes to conform to the standard.
	  [ruby-core:63807] [Bug #10055]

Sat Nov  5 12:14:31 2016  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (Pathname#empty?): New method.
	  [ruby-core:76404] [Feature#12596] Proposed by John Backus.

Sat Nov  5 11:53:02 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* test/ruby/test_refinement.rb (test_refine_alias_in_subclass):
	  add a test to check that alias in subclasses can be refined.
	  [ruby-core:69374] [Bug #11186]

Sat Nov  5 11:20:57 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* cont.c (cont_new): disable optimization if clang's version is
	  3.8.0.  [ruby-core:77894] [Bug #12893]

Sat Nov  5 10:07:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_file.rb (TestFile#test_stat): fix noatime case.
	  [ruby-core:77943] [Bug #12903]

Fri Nov  4 17:52:44 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c (heap_page_resurrect): do not return tomb_pages when
	  page->freelist == NULL.
	  [Bug #12670]

Fri Nov  4 16:31:45 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_dtoa): round to even, instead of rounding to
	  nearest.  [ruby-core:77864] [Bug #12889]

Fri Nov  4 15:31:00 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: Add compiler version message into rbconfig
	  as RbConfig::CONFIG['CC_VERSION_MESSAGE']. [Feature #12896]

Fri Nov  4 13:03:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* numeric.c (rb_int_digits): Fix exception message
	  [ruby-core:77502] [Bug #12815]
